# email-invites

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
email_invites/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
email_invites/templates/email_invites/: send_invitations.html  settings.html
