[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretalx-email-invites"
version = "0.0.1"  # <-- ADD THIS LINE
description = "Send mass email invitations using pretalx templates"
readme = "README.md"
authors = [
  { name = "JXS", email = "developers@fueledbyx.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 10",
]
dependencies = [
    "pretalx",
]

[project.entry-points."pretalx.plugin"]
email_invites = "email_invites:EmailInvitesPlugin"

[tool.setuptools]
package-dir = { "" = "email_invites" }
packages = { find = { where = ["email_invites"] } }
include-package-data = true
