[metadata]
name = pretalx-email-invites
version = 0.0.1
description = Send mass email invitations using pretalx templates
author = JXS
license = Apache Software License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires =
    pretalx

[options.entry_points]
pretalx.plugin =
    email_invites = email_invites:EmailInvitesPlugin
